Aggiunto metodo GetDouble al Cursor.

--- a/SqliteDB/SqliteDB.vcxproj
+++ b/SqliteDB/SqliteDB.vcxproj
@@ -75,6 +75,10 @@
     <ClCompile Include="sqlite3.c" />
     <ClCompile Include="sqlite_db.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
