--- a/SqliteDB/SqliteDB.vcxproj.filters
+++ b/SqliteDB/SqliteDB.vcxproj.filters
@@ -36,4 +36,8 @@
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
 </Project>
